# ukftractography

./: .gitignore  CMakeLists.txt  Common.cmake  Dockerfile  LICENSE.txt  QuadProg++_vnl.cc  README  README.md  SuperBuild.cmake  UKFTractography.cmake  UKFTractography.cxx  build-test.yml  doc_config.txt  dwi_normalize.cc  dwi_normalize.h  fiber.cc  fiber.h  filter_model.h  install_manifest.txt  mainpage.h  math_utilities.h  sample_run.sh  seed.cc  thread.cc  thread.h  timer.cc  timer.h  tractography.cc  tractography.h  ukf_tractography.s4ext  unscented_kalman_filter.cc  utilities.cc  utilities.h  vtk_writer.h
BuildTools/: BuildMacros.cmake
CMake/: CTestCustom.cmake.in  ExternalProjectDependency.cmake  ITKSetStandardCompilerFlags.cmake  NAMICExternalProjectsExternalData.cmake  PreventInBuildInstalls.cmake  PreventInSourceBuilds.cmake  SlicerBlockSetCMakeOSXVariables.cmake
CompressedSensing/: BPDN_homotopy.cxx  BPDN_homotopy.h  BalancedDWIReplications.h  BuildRidges.cxx  BuildRidges.h  BuildSensor.cxx  BuildSensor.h  CMakeLists.txt  CompressedSensing.cxx  CompressedSensing.h  CompressedSensing.xml  DefaultGradients.cxx  DefaultGradients.h  DoCSEstimate.cxx  DoCSEstimate.h  HARDICompressedSensing.xml  MultiSample.cxx  MultiSample.h  NrrdFile.cxx  NrrdFile.h  SphHarm.cxx  SphHarm.h  SphericalHarmonics.cxx  SphericalHarmonics.h  icosahedron3.cxx  icosahedron3.h  nrrdIO.h
CompressedSensing/Testing/: CMakeLists.txt  DefaultGradients.txt
InteractiveUKF/: CMakeLists.txt  qSlicerInteractiveUKFModule.cxx  qSlicerInteractiveUKFModule.h  qSlicerInteractiveUKFModuleWidget.cxx  qSlicerInteractiveUKFModuleWidget.h
InteractiveUKF/Logic/: CMakeLists.txt  vtkSlicerInteractiveUKFLogic.cxx  vtkSlicerInteractiveUKFLogic.h
InteractiveUKF/Resources/: qSlicerInteractiveUKFModule.qrc
InteractiveUKF/Resources/UI/: qSlicerInteractiveUKFModuleWidget.ui  qSlicerInteractiveUKFQWidget.ui
InteractiveUKF/UI/: CMakeLists.txt  InteractiveUKF.py
InteractiveUKF/Widgets/: CMakeLists.txt  qSlicerInteractiveUKFQWidget.cxx  qSlicerInteractiveUKFQWidget.h
OptionalTools/: CMakeLists.txt
Slicer4ExtensionBuild/: CMakeLists.txt
Slicer4ExtensionBuild/.svn/: all-wcprops  entries
Testing/: CMakeLists.txt  (+3 more)
UKFTractography/: CMakeLists.txt  ConvertVTK.xml  UKFTractography.cxx  UKFTractography.xml
UKFTractography/Data/Baseline/: 1T_fiber.vtk
UKFTractography/Data/Input/: dataset_Mask.nrrd  dwi-mask.nhdr  dwi.nhdr  mask.nhdr  seeds_full_cc.nrrd  single_tensor.nhdr
UKFTractography/Testing/: CMakeLists.txt  generate_ground_truth.sh  slicer_cli_test.py
common/: BRAINSThreadControl.cxx  BRAINSThreadControl.h  CMakeLists.txt  dummy.cc  fiber.h  linalg.h  ukf_exports.h  ukf_types.h  vtkPolyDataIO.h  vtkReader.cc  vtkReader.h
fibertractdispersion/: CMakeLists.txt  computedispersion.cxx  computedispersion.h  fiberbundle.cxx  fiberbundle.h  fibertractdispersion.cxx  fibertractdispersion.xml
fibertractdispersion/Testing/: CMakeLists.txt
superbuild/: CMakeLists.txt  TeemPatch.cmake
ukf/: CMakeLists-orig.txt  CMakeLists.txt  ConvertVTK.cxx  ConvertVTK.xml  ISignalData.h  LU_solver.h  NrrdData.cc  NrrdData.h  QuadProg++_Eigen.cc  QuadProg++_Eigen.h  QuadProg++_vnl.cc  QuadProg++_vnl.h  README.md  UKFTractography.cxx  UKFTractography.xml  cli.cc  cli.h  config.h  config.h.in  dwi_normalize.cc  dwi_normalize.h  fiber.cc  fiber.h  filter_Full1T.cc  filter_Full1T.h  filter_Full1T_FW.cc  filter_Full1T_FW.h  filter_Full2T.cc  filter_Full2T.h  filter_Full2T_FW.cc  filter_Full2T_FW.h  filter_Full3T.cc  filter_Full3T.h  filter_NODDI1F.cc  filter_NODDI1F.h  filter_NODDI2F.cc  filter_NODDI2F.h  filter_Simple1T.cc  filter_Simple1T.h  filter_Simple1T_FW.cc  (+31 more)
ukf/Data/: GenerateSynDataForTractography.m
ukf/Data/Baseline/: 1T_fiber.vtk  1T_fw_fiber.vtk  2T_fiber.vtk  2T_fw_fiber.vtk  log.txt  seeds_tc.vtk  seeds_tc_1seed_mac.vtk
ukf/Data/Input/: seeds_tc.nhdr
ukf/SuperBuild/: CMakeLists.txt
ukf/Testing/: CMakeLists.txt  CompareFibers.cc  generate_ground_truth.sh  slicer_cli_test.py  vtkReader.h
ukf/Testing/Cxx/: CMakeLists-old.txt  CMakeLists.txt  CompareFiber.h  CompareFibers.cc  vtkReader.h
ukf/Testing/Data/: 1T_fiber.vtk
ukf/documentation/: ISignalData_8h.html  NrrdData_8cc.html  QuadProg_09_09__vnl_8cc.html  QuadProg_09_09__vnl_8h.html  QuadProg_09_09__vnl_8h_source.html  QuadProg_09_09__vnl_8hh.html  QuadProg_09_09__vnl_8hh_source.html  annotated.html  classNrrdData-members.html  classNrrdData.html  classProgressThread.html  classTimer-members.html  classTractographyThread.html  classUnscentedKalmanFilter.html  classVtkWriter-members.html  classVtkWriter.html  classes.html  dwi__normalize_8cc.html  dwi__normalize_8h.html  dwi__normalize_8h_source.html  fiber_8h_source.html  files.html  filter__model_8h.html  functions_enum.html  functions_vars.html  globals_func.html  linalg_8h_source.html  math__utilities_8h_source.html  namespaceLU__Solver.html  namespacemembers.html  pages.html  seed_8cc.html  seed_8h_source.html  structFilterModel-members.html  structFull1T.html  structFull1T__FW-members.html  structFull2T-members.html  structFull3T-members.html  structFull3T.html  structSeedPointInfo.html  (+10 more)
ukf/documentation/search/: all_5f.html  all_66.html  all_72.html  all_74.html  all_75.html  all_77.html  all_7e.html  classes_66.html  classes_69.html  classes_70.html  classes_73.html  classes_74.html  defines_6d.html  files_6e.html  files_73.html  files_75.html  files_76.html  functions_67.html  functions_6c.html  functions_6f.html  functions_71.html  search.js  variables_74.html  variables_77.html
ukf/testing/: CMakeLists.txt  linalg.h
vtk2mask/: Array3D.h  CMakeLists.txt  Converter.cc  Converter.h  fiber.h  linalg.h  vtk2mask.cxx  vtk2mask.xml  vtkReader.cc  vtkReader.h
vtkFilter/: CMakeLists.txt  ExpressionEvaluator.cc  ExpressionEvaluator.h  ExpressionParser.cc  ExpressionParser.h  FiberFilter.cc  FiberFilter.h  FiberLogic.h  Region.cc  Region.h  fiber.h  linalg.h  vtkFilter.cxx  vtkFilter.xml  vtkReader.cc  vtkReader.h  vtkWriter.cc  vtkWriter.h
vtkFilter/Slicer4ExtensionBuild/: CMakeLists.txt
(+197 files in other folders)
